Fix overflow issue on small devices

--- a/src/pages/Signup/signup.css
+++ b/src/pages/Signup/signup.css
@@ -84,4 +84,8 @@ form > .inputContainer {
     .formError {
         width: var(--text-input-width-small-screen);
     }
+
+    .signUpPage__content {
+        display: block;
+    }
 }
